Gui fixes, helpfile, box out of bounds , etc (#161)
* Fixing GUI up

* Class boxes can no longer go out of range of window, or crash GUI

* Setting up to fix textbox resize, etc

* Needed to comment some stuff out just in case

--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@ body{
 }
 svg {
   margin-top:50px;
-  width:100vw;
+  width:180vw;
   height:100vh;
   background-color:#FFF;
   max-width:100%;
@@ -16,6 +16,7 @@ svg {
 {
   margin-top:50px;
   height:100vh;
+  width: 25vw;
   background-color:black;
   overflow-x:auto;
   color:gray;
@@ -35,4 +36,32 @@ body form
 {
   font-size:15px;
 }
+/*
+HELP FILE FORMATTING START-------------------------------------------------------------------------------------------
+*/
+.helpformat-container{
+  color: white;
+  padding-right: 50%;
+}
 
+.spacing{
+  line-break: strict;
+ 
+}
+.headers{
+  color: red;
+  font-size: large;
+  font-style: italic;
+}
+.titleforHelp{
+  color: gray;
+  font-size: x-large;
+  font-style: italic;
+}
+/*
+HELP FILE FORMATTING END-------------------------------------------------------------------------------------------
+*/
+.class.name {
+  resize: both;
+  overflow: auto;
+} 
